completing the moodmap

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="myApp" ng-cloak>
 
 <head>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
   <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -10,14 +11,11 @@
   <h1>Templating!!!</h1>
 
   <div id="chart_reflection">
-    <mood-map-bar-chart-reflection data="XY.yValue"></mood-map-bar-chart-reflection>
+    <mood-map-bar-chart-reflection data="XY"></mood-map-bar-chart-reflection>
   </div>
 
-
-
-
   <div id="mood-map-chart">
-    <mood-map-chart-reflection></mood-map-chart-reflection>
+    <!--    <mood-map-chart-reflection></mood-map-chart-reflection>-->
     <mood-map-chart></mood-map-chart>
   </div>
 
